--- a/site/module 3 solution/index.html
+++ b/site/module 3 solution/index.html
@@ -138,7 +138,7 @@
         </section>
     </div>
 
-    <script src="js/jquery-2.1.4.min.js"></script>
+    <script src="js/jQuery v3.3.1.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
 </body>
 
